--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 
 <body>
 
-  <div id="wrapper">
+  <div id="room_wrapper" style="text-align: center;border: 2px solid #0b0b0b;border-radius: 3px;width: 400px;padding: 20px;margin-left:
+    34%;">
+    <input type="text" id="uname" placeholder="Your Name" style="height: 30px;padding: 5px;"><br>
+    <input type="text" id="uroom" placeholder="Room Name" style="height: 30px;padding: 5px;margin-top: 10px;"><br><br>
+    <input type="submit" value="Create Room" id="submitmsg" class="room">
+  </div>
+
+  <div id="wrapper" style="display: none;">
     <div id="menu">
       <p class="welcome">Welcome, <b id="userName"></b></p>
     </div>
@@ -14,7 +21,7 @@
     </div>
 
     <form>
-      <input name="usermsg" type="text" id="usermsg" autocomplete="Off" required/>
+      <input name="usermsg" type="text" id="usermsg" autocomplete="Off" required />
       <input name="submitmsg" type="submit" id="submitmsg" value="Send" />
     </form>
   </div>
@@ -25,80 +32,93 @@
 <script src="https://code.jquery.com/jquery-3.5.1.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
 <script>
-  let userName = prompt("What's your name");
-  let room = prompt("Room name");
 
-  //let userName = 'Ramesh';
-  //let room = 'room1';
-
-  $('#userName').text(userName);
-
-  let ID = "";
-  var socket = io();
-  //send event that user has joined room
-  socket.emit("join room", { username: userName, roomName: room });
-
-  //receive data from server.
-  socket.on('send data', (data) => {
-    ID = data.id; //ID will be used later
-    console.log(" my ID:" + ID);
-  })
+  $('.room').click(function () {
+    if (($('#uname').val() != '') && ($('#uroom').val() != '')) {
+      $('#wrapper').show();
+      $('#room_wrapper').hide('slow');
+      userName = $('#uname').val();
+      room = $('#uroom').val();
 
 
-  $("#usermsg").focus();
-  //when form is submitted, capture the input value and then send it to server
-  document
-    .getElementsByTagName("form")[0]
-    .addEventListener("submit", function (event) {
-      event.preventDefault();
-      socket.emit("chat message", {
-        value: document.getElementById("usermsg").value,
-        user: userName,
+
+
+      //let userName = prompt("What's your name");
+      //let room = prompt("Room name");
+
+      $('#userName').text(userName);
+
+      let ID = "";
+      var socket = io();
+      //send event that user has joined room
+      socket.emit("join room", { username: userName, roomName: room });
+
+      //receive data from server.
+      socket.on('send data', (data) => {
+        ID = data.id; //ID will be used later
+        console.log(" my ID:" + ID);
+      })
+
+
+      $("#usermsg").focus();
+      //when form is submitted, capture the input value and then send it to server
+      document
+        .getElementsByTagName("form")[0]
+        .addEventListener("submit", function (event) {
+          event.preventDefault();
+          socket.emit("chat message", {
+            value: document.getElementById("usermsg").value,
+            user: userName,
+          });
+          document.getElementById("usermsg").value = "";
+        });
+
+
+      // Picks up the data emitted by the server and displays the message to the webpage
+      socket.on("chat message", (data) => {
+        console.log(data.data.user + ": " + data.id);
+        displayMessage(data);
       });
-      document.getElementById("usermsg").value = "";
-    });
 
 
-  // Picks up the data emitted by the server and displays the message to the webpage
-  socket.on("chat message", (data) => {
-    console.log(data.data.user + ": " + data.id);
-    displayMessage(data);
+      function displayMessage(data) {
+        let authorClass = "";
+        let divClass = ""
+        //verify that the user ID and the message sent ID is similar 
+        if (data.id === ID) {
+          console.log("This person has sent a message")
+          authorClass = "me";
+          divClass = "myDiv";
+        } else {
+          authorClass = "you";
+          divClass = "yourDiv";
+        }
+        const div = document.createElement("div");
+        div.className = divClass;
+        const li = document.createElement("li");
+        const p = document.createElement("p");
+        div.innerHTML =
+          '<p class="' +
+          authorClass +
+          '">' +
+          data.data.user + ', ' + moment().format("hh:mm A") +
+
+          "</p>" +
+          '<p class="message"> ' +
+          data.data.value +
+          "</p>";
+        div.appendChild(p);
+        li.appendChild(div);
+
+        document.getElementById("messages").appendChild(li);
+
+        window.scrollTo(0, document.body.scrollHeight); //scroll to the bottom
+      }
+
+
+    }
   });
 
-
-  function displayMessage(data) {
-    let authorClass = "";
-    let divClass = ""
-    //verify that the user ID and the message sent ID is similar 
-    if (data.id === ID) {
-      console.log("This person has sent a message")
-      authorClass = "me";
-      divClass = "myDiv";
-    } else {
-      authorClass = "you";
-      divClass = "yourDiv";
-    }
-    const div = document.createElement("div");
-    div.className = divClass;
-    const li = document.createElement("li");
-    const p = document.createElement("p");
-    div.innerHTML =
-      '<p class="' +
-      authorClass +
-      '">' +
-      data.data.user + ', ' + moment().format("hh:mm A") +
-      
-      "</p>" +
-      '<p class="message"> ' +
-      data.data.value +
-      "</p>";
-    div.appendChild(p);
-    li.appendChild(div);
-
-    document.getElementById("messages").appendChild(li);
-    
-    window.scrollTo(0, document.body.scrollHeight); //scroll to the bottom
-  }
 </script>
 
 </html>
