--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 
   <div id="room_wrapper" style="text-align: center;border: 2px solid #0b0b0b;border-radius: 3px;width: 400px;padding: 20px;margin-left:
     34%;">
-    <input type="text" id="uname" placeholder="Your Name" style="height: 30px;padding: 5px;"><br>
-    <input type="text" id="uroom" placeholder="Room Name" style="height: 30px;padding: 5px;margin-top: 10px;"><br><br>
+    <input type="text" id="uname" placeholder="Your Name" autocomplete="Off" style="height: 30px;padding: 5px;"><br>
+    <input type="text" id="uroom" placeholder="Room Name" autocomplete="Off" style="height: 30px;padding: 5px;margin-top: 10px;"><br><br>
     <input type="submit" value="Create Room" id="submitmsg" class="room">
   </div>
 
