--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 </body>
 
 <!-- <script src="/socket.io/socket.io.js"></script> -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" defer></script>
-<script src="http://code.jquery.com/jquery-3.5.1.js" crossorigin="anonymous"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" defer></script>
+<script src="https://code.jquery.com/jquery-3.5.1.js" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
 <script src="/client.js" defer></script>
 </html>
