--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
+<!DOCTYPE html>
 <html>
-<link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet" />
-<link rel="stylesheet" href="/style.css" />
+
+<head>
+  <title>Realtime communication with WebRTC</title>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="/style.css" />
+  <!-- <script src="/socket.io/socket.io.js"></script> -->
+  <script src="https://code.jquery.com/jquery-3.5.1.js" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" defer></script>
+  <script src="/client.js" defer></script>
+</head>
+
 <body>
 
   <div id="room_wrapper"
@@ -11,7 +22,7 @@
     <input type="submit" value="Create Room" id="submitmsg" class="room">
   </div>
 
-  
+
   <video id="remoteVideo" autoplay></video>
 
   <div id="wrapper" style="display: none;">
@@ -40,9 +51,4 @@
 
 </body>
 
-<!-- <script src="/socket.io/socket.io.js"></script> -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" defer></script>
-<script src="https://code.jquery.com/jquery-3.5.1.js" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
-<script src="/client.js" defer></script>
 </html>
