--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
   <div id="consultingRoom" style="display: none;">
-    <video id="localVideo" autoplay style="width:25%;"></video>
+    <video id="localVideo" autoplay=false style="width:25%;"></video>
   </div>
 
 
@@ -49,7 +49,8 @@
 <!-- <script src="/socket.io/socket.io.js"></script> -->
 <script src="https://code.jquery.com/jquery-3.5.1.js" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.26.0/moment.min.js"></script>
-<script src="/adapter.js"></script>
+<!-- <script src="/adapter.js"></script> -->
+<script src="https://webrtc.github.io/adapter/adapter-latest.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.3.0/socket.io.js" defer></script>
 <script src="/client.js" defer></script>
 
