local video muted

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
   <div id="consultingRoom" style="display: none;">
-    <video id="localVideo" autoplay=false style="width:25%;"></video>
+    <video id="localVideo" muted autoplay=false style="width:25%;"></video>
   </div>
 
 
