--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </div>
 
 
-  <video id="remoteVideo" autoplay></video>
+  
 
   <div id="wrapper" style="display: none;">
     <div id="menu">
@@ -40,7 +40,8 @@
 
 
   <div id="consultingRoom" style="display: none;">
-    <video id="localVideo" muted autoplay=false style="width:25%;"></video>
+    <video id="localVideo" autoplay muted playsinline style="width:25%;"></video>
+    <video id="remoteVideo" autoplay playsinline></video>
   </div>
 
 
